--- a/gradle.properties
+++ b/gradle.properties
@@ -1,23 +1,23 @@
 # Project
 version=0.1
-version_patch=10
+version_patch=11
 maven_path=snapshots
 group=com.lowdragmc.shimmer
 
 # Common
-minecraft_version=1.18.2
+minecraft_version=1.19.1
 common_runs_enabled=false
 common_client_run_name=Common Client
 common_server_run_name=Common Server
 
 
 # Forge
-forge_version=40.1.0
+forge_version=42.0.1
 forge_ats_enabled=true
 
 # Fabric
-fabric_version=0.55.1+1.18.2
-fabric_loader_version=0.13.3
+fabric_version=0.58.5+1.19.1
+fabric_loader_version=0.14.8
 
 # Mod options
 mod_name=Shimmer
@@ -27,6 +27,12 @@ mod_id=shimmer
 # Gradle
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+
+# Dependencies
+sodium=3820973
+rubidium=3864138
+flywheel=3871082
+modern_ui=3.4.4.103
 
 #systemProp.http.proxyHost=127.0.0.1
 #systemProp.http.proxyPort=1080
