--- a/Forge/src/main/resources/META-INF/accesstransformer.cfg
+++ b/Forge/src/main/resources/META-INF/accesstransformer.cfg
@@ -4,3 +4,7 @@ public net.minecraft.client.renderer.LevelRenderer$RenderChunkInfo #LevelRendere
 public net.minecraft.client.renderer.LevelRenderer$RenderChunkInfo f_109839_ # chunk
 
 public com.mojang.blaze3d.vertex.PoseStack f_85834_ # poseStack
+
+public net.minecraft.client.renderer.chunk.ChunkRenderDispatcher$RenderChunk$RebuildTask
+public net.minecraft.client.renderer.chunk.ChunkRenderDispatcher$RenderChunk$RebuildTask$CompileResults
+public com.mojang.blaze3d.shaders.Program$Type m_85571_()I # getGlType
